Fix for rounded input corners on iphone.

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,10 @@ input {
     border-radius: 0;
 }
 
+#query {
+    border-radius: 0;
+}
+
 h5 {
     line-height: 2rem;
 }
